general stuff and big plotting addition
- global_prio_period in PCTPCAggregator
- better rules for setting prio 2 in PCTPCAggregator
- create_plots to illustrate aggregation of the data
- decompress_df function
- updated example_usage with new functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ readme = "README.md"
 license = {file = "LICENSE"}
 dependencies = [
     "numpy",
-    "pandas"
-    "termcolor"
+    "pandas",
+    "termcolor",
+    "matplotlib",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
